调试，修改管理